trial
Cell In[2], line 2
    """
    ^
SyntaxError: (unicode error) 'unicodeescape' codec can't decode bytes in position 102-103: truncated \UXXXXXXXX escape
